--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     the plorts you need to sell come from feeding slimes and harvesting what they leave behind.
     Other notable topics are:</p>
     <ol>
-      <li><a href="plort_marktet">The Plort Market</a></li>
+      <li><a href="plort_market">The Plort Market</a></li>
       <li><a href="tarr_slime.html">Tarr Slimes</a></li>
       <li><a href="food_types.html">Food Types</a></li>
       <li><a href="special_requirements.html">Special Requirements</a></li>
