--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       so I will be writing about my new favorite game: Slime Rancher 2!
     </h1>
     <a href="https://www.slimerancher.com/">Info from the source!</a>
-    <img src="https://assets-prd.ignimgs.com/2021/06/13/screenshot-1-1623606797401.png" />
+    <img src="pink slime.png" />
     
     <p>Slime Rancher is a sequel to/expansion of the original game Slime Rancher, 
     which is about a woman who goes into the undocumented "Far, Far Range" to gather and farm slimes! 
