--- a/tarr_slime.html
+++ b/tarr_slime.html
@@ -9,5 +9,6 @@
       Tarrs can only be stopped by throwing them into water, or shooting them with the water gun gadget. The gadget requires a lot of materials though, 
       so throwing tarrs into the ocean is often your best bet.</p>
     
+     <img src="https://tse4.mm.bing.net/th?id=OIP.fx61kPINOZ8EkoClkSr7WwHaD_&pid=Api&P=0" />
   </body>
 </html>
