--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+      <head>
+    <link rel="stylesheet" href="mystyle.css">
+    <meta charset="UTF-8">
+    <title>Final Project</title>
+    </head>
   <body>
     <h1>
       Hello! My name is Elise and this is my midterm project. I am not entirely sure what to put in this webpage,
