--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="my_style.css">
     <meta charset="UTF-8">
     <title>Final Project</title>
   </head>
