--- a/special_requirements.html
+++ b/special_requirements.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <body>
+  <head>
+    <link rel="stylesheet" href="my_style.css">
+    <meta charset="UTF-8">
+    <title>Final Project</title>
+  </head>
   <h1>Special Requirements</h1>
   
   <p>Some slimes have certain requirements that must be met for them to thrive in captivity. 
