--- a/tarr_slime.html
+++ b/tarr_slime.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="my_style.css">
+    <meta charset="UTF-8">
+    <title>Final Project</title>
+  </head>
   <body>
     <h1>Tarr Slimes</h1>
     
