--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       
   <body>
     <h1>
-      Hello! My name is Elise and this is my midterm project. I am not entirely sure what to put in this webpage,
+      Hello! My name is Elise and this is my final project. I am not entirely sure what to put in this webpage,
       so I will be writing about my new favorite game: Slime Rancher 2!
     </h1>
     <a href="https://www.slimerancher.com/">Info from the source!</a>
