--- a/food_types.html
+++ b/food_types.html
@@ -12,20 +12,18 @@
       Most slime types have only one category of food they can eat: meat, vegetables or fruit. And each slime type has its favorite type 
       which will produce twice as many plorts as usual. For instance, Cotton Slimes favorite food is water lettuce.</p>
     
-    <p>Here are the food types of some of the commonly found foods in the game:</p>
-    
     <p>
-       A table
+      Here are the food types of some of the commonly found foods in the game:
        <table>
           <tr>
-            <th>Henhen</th>
-            <th>Pogofruit</th>
-            <th>Carrot</th>
+            <th>Meat</th>
+            <th>Fruit</th>
+            <th>Vegetable</th>
           </tr>
           <tr>
-             <td>Meat</td>
-             <td>Fruit</td>
-             <td>Vegetable</td>
+             <td>Henhen</td>
+             <td>Pogofruit</td>
+             <td>Carrot</td>
           </tr>
        </table>
      </p>
