--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="https://www.slimerancher.com/">Info from the source!</a>
     <img src="pink slime.png" />
     
+    <p>Also my favorite programming language is python and the "Hello World" program is written like this: print("Hello World!")</p>
+    
     <p>Slime Rancher is a sequel to/expansion of the original game Slime Rancher, 
     which is about a woman who goes into the undocumented "Far, Far Range" to gather and farm slimes! 
     There are many things you can do in the game, such as:"</p>
