--- a/plort_market.html
+++ b/plort_market.html
@@ -16,5 +16,7 @@
       but there are ways that you as the player can affect the market. Like if you sell a lot of pink plorts, the price will go down for that specific plort 
       because you have met the demand that created the price. This can happen with any plort no matter how rare, and the prices can even change within the day as well, 
       so it's important to keep an eye on how much everything is worth to make sure you don't erase demand.</p>
+    
+    <a href="index">Home</a>
   </body>
 </html>
