--- a/special_requirements.html
+++ b/special_requirements.html
@@ -12,4 +12,5 @@
     a short amount of time if they are not in those areas. Batty and Phosphor slimes must also be kept in pens that block the suns light, 
     or they will perish as well. Many other slimes also need to be kept in pens with roofs so that they cannot jump out whenever they want.</p>
   
+  <a href="index">Home</a>
 </body>
