--- a/tarr_slime.html
+++ b/tarr_slime.html
@@ -15,5 +15,7 @@
       so throwing tarrs into the ocean is often your best bet.</p>
     
      <img src="https://tse4.mm.bing.net/th?id=OIP.fx61kPINOZ8EkoClkSr7WwHaD_&pid=Api&P=0" />
+    
+    <a href="index">Home</a>
   </body>
 </html>
