--- a/food_types.html
+++ b/food_types.html
@@ -34,6 +34,6 @@
       but that's all they can eat and it's their favorite food. However, since the game is early release, you can't yet grow the nectar on your own. 
       You have to gather it all in the wild in order to feed your flutter slimes.</p>
     
-    <a href="index">Home</a>
+    <a href="index.html">Home</a>
   </body>
 </html>
