--- a/plort_market.html
+++ b/plort_market.html
@@ -17,6 +17,6 @@
       because you have met the demand that created the price. This can happen with any plort no matter how rare, and the prices can even change within the day as well, 
       so it's important to keep an eye on how much everything is worth to make sure you don't erase demand.</p>
     
-    <a href="index">Home</a>
+    <a href="index.html">Home</a>
   </body>
 </html>
