--- a/tarr_slime.html
+++ b/tarr_slime.html
@@ -16,6 +16,6 @@
     
      <img src="https://tse4.mm.bing.net/th?id=OIP.fx61kPINOZ8EkoClkSr7WwHaD_&pid=Api&P=0" />
     
-    <a href="index">Home</a>
+    <a href="index.html">Home</a>
   </body>
 </html>
